<resources>
	<!-- Main -->
	<string name="app_name">Notes</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="notes_list_for">Notes for %1$s, %2$d</string>

	<!-- Buttons -->
	<string name="button_login_input">Login</string>
	<string name="button_logout">Logout</string>
	<string name="button_add_note">Add Note</string>
	<string name="button_save_note">Save Note</string>
	<string name="button_share_note">Share Note</string>

	<!-- Input -->
	<string name="input_name">Name</string>
	<string name="input_age">Age</string>
	<string name="input_note_title">Title</string>
	<string name="input_note_content">Content</string>

	<!-- Chooser -->
	<string name="add_note_share_title">Choose an app to share your note.</string>

	<!-- Dialog -->
	<string name="note_list_delete_note_title">Delete Note</string>
	<string name="note_list_delete_note">Are you sure you want to delete the Note %1$s?</string>

	<!-- Toasts -->
	<string name="main_name_missing">Please fill in your name!</string>
	<string name="main_age_missing">Please fill in your age!</string>
	<string name="add_note_title_missing">Please fill in a title!</string>
	<string name="add_note_content_missing">Please fill in some content!</string>
</resources>
