<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".AddNoteActivity">
	<EditText
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:id="@+id/input_note_title"
			android:hint="@string/input_note_title"
			android:layout_marginTop="16dp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:singleLine="true"
			android:inputType="text"
			android:background="@android:color/transparent"
			android:textSize="24sp"/>
	<EditText
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/input_note_title"
			app:layout_constraintBottom_toTopOf="@+id/linearLayout"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:ems="10"
			android:id="@+id/input_note_content"
			android:hint="@string/input_note_content"
			android:singleLine="false"
			android:inputType="textMultiLine"
			android:gravity="top|start"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:background="@android:color/transparent"/>
	<LinearLayout
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/linearLayout"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:gravity="center">
		<Button
				android:text="@string/button_save_note"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/button_save_note"
				android:onClick="saveNote"
				android:layout_marginStart="2dp"
				android:layout_marginEnd="2dp"/>
		<Button
				android:text="@string/button_share_note"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/button_share_note"
				android:onClick="shareNote"
				android:layout_marginEnd="2dp"
				android:layout_marginStart="2dp"/>
	</LinearLayout>
</android.support.constraint.ConstraintLayout>
