<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">
	<EditText
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:ems="10"
			android:id="@+id/input_name"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:hint="@string/input_name"/>
	<EditText
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/input_name"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/input_age"
			android:layout_marginEnd="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginStart="8dp"
			android:hint="@string/input_age"
			android:maxLength="3"/>
	<Button
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/input_age"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/button_save"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:onClick="save_button"
			android:text="@string/button_login_input"/>
</android.support.constraint.ConstraintLayout>
